# panman

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  Fasta to SAM_BAM_CRAM.txt  LICENSE  MSA Tools.txt  Makefile  PangenomeMAT.cpp  PangenomeMAT.hpp  README.md  build_PanMAT.md  chaining.cpp  construction.html  description.txt  dock.sh  index.html  install.html  make.sh  mkdocs.yml  mutation_annotation.pb.cc  mutation_annotation.pb.h  mutation_annotation.proto  mutation_annotation_old_old.pb.cc  mutation_annotation_test_proto3_optional.proto  mutation_annotation_test_proto3_optional_new.proto  mutation_annotation_v5.proto  pangenomeMAT  panman.capnp  panman.proto  panmanUtilsConfig.cmake.in  read_sample  read_sample.cpp  remake.sh  sample_mat.pb  sars2k.pmat  simulate.py  test.sh  usher.proto  utils.html  (+2 more)
.github/workflows/: ci.yml  cmake.yml
alignments/: 1k.aln.sam  1k.pileup
build_phylo/: CMakeLists.txt  gene1.aln  gene1.best.tre  gene10.aln  gene10.best.tre  gene2.aln  gene2.best.tre
cmake/: dependencies.cmake  panmanConfig.cmake.in  panmat-config.cmake.in
construction/: index.html
de_novo/: a.out  file_io.hpp  main.cpp  panmat.cpp  panmat.hpp
docker/: DockerFile  Dockerfile
docs/: build.md  construction.md  index.md  install.md  mkdocs.yml  panman.yml  quickstart.md  utility.md  utils.md
docs/docs/: index.md
docs/stylesheets/: extra.css
fastq/: MT821778.1.1kreads.fastq_R1.fastq  MT821778.1.1kreads.fastq_R2.fastq  MT821778.1.1kreads.fastq_abundance.txt  MT834260.1.1kreads.fastq_R1.fastq  MT834260.1.1kreads.fastq_R2.fastq  MT834260.1.1kreads.fastq_abundance.txt  MT969389.1.1kreads.fastq_R1.fastq  MT969389.1.1kreads.fastq_R2.fastq  MT969389.1.1kreads.fastq_abundance.txt  MW211005.1.1kreads.fastq_R1.fastq  MW211005.1.1kreads.fastq_R2.fastq  MW211005.1.1kreads.fastq_abundance.txt  MW593420.1.1kreads.fastq_R1.fastq  MW593420.1.1kreads.fastq_R2.fastq  MW593420.1.1kreads.fastq_abundance.txt  MW848017.1.1kreads.fastq_R1.fastq  MW848017.1.1kreads.fastq_R2.fastq  MW848911.1.1kreads.fastq_R1.fastq  MW848911.1.1kreads.fastq_R2.fastq  MW848911.1.1kreads.fastq_abundance.txt  MW849832.1.1kreads.fastq_R1.fastq  MW849832.1.1kreads.fastq_R2.fastq  MW849832.1.1kreads.fastq_abundance.txt  MW855731.1.1kreads.fastq_R1.fastq  MW855731.1.1kreads.fastq_R2.fastq  MW855731.1.1kreads.fastq_abundance.txt  MZ132307.1.1kreads.fastq_R1.fastq  MZ132307.1.1kreads.fastq_R2.fastq  MZ132307.1.1kreads.fastq_abundance.txt  MZ239798.1.1kreads.fastq_R1.fastq  MZ239798.1.1kreads.fastq_R2.fastq  MZ239798.1.1kreads.fastq_abundance.txt  MZ295175.1.1kreads.fastq_R1.fastq  MZ295175.1.1kreads.fastq_R2.fastq  MZ499807.1.1kreads.fastq_R1.fastq  MZ499807.1.1kreads.fastq_R2.fastq  MZ664860.1.1kreads.fastq_R1.fastq  MZ664860.1.1kreads.fastq_R2.fastq  MZ664860.1.1kreads.fastq_abundance.txt  OL709343.1.1kreads.fastq_R1.fastq  (+153 more)
gpu/: fitchSankoff.cu  fitchSankoff.cuh  kseq.h  panmanUtils.cu  panmanUtils.cuh  usher.pb.cc  utils.cpp  utils.hpp
info/: testfasta_0.fasta
install/: index.html  installUbuntu.sh  installationMacOS.sh  installationUbuntu.sh
likelihood_src/: core_likelihood_fp32.cpp  core_likelihood_fp32.hpp  core_likelihood_fp64.cpp  core_likelihood_fp64.hpp  llk_fp32.cpp  llk_fp64.cpp  run.sh  tree_fp32.cpp  tree_fp64.cpp
likelihood_src/results/2024-01-07/JarvD5a/: fp_32  fp_64
likelihood_src/results/2024-01-07/JarvD5b/: fp_32  fp_64
likelihood_src/results/2024-01-07/MisoD2a/: fp_32  fp_64
likelihood_src/results/2024-01-07/MisoD2b/: fp_32  fp_64
likelihood_src/results/2024-01-07/PrumD6/: fp_32  fp_64
likelihood_src/results/2024-01-07/SongD1/: fp_32  fp_64
mat-construction/: MAT_v5.py
mat-construction/common/: fitch.py  fitch_blocks.py  jsontomsa.py  jsontoseq.py  read_json.py  read_seq.py  samtofa.py
mat-construction/common2/: blockAlign.py  gfa2panmat.py  mat_gen.py  msatopanmat.py  msatopanmat_v2.py  readJson.py  readMat.py
mutation_matrices/: sars_4k.mutmat
python_src/: cyc_rm.py  readJson.py  rotation.py
results/: 10_old.mai  ecoli_10.mat  example0.fastq  results.md  sars_10.mai  sars_10.mat  sars_100.mai  sars_100.mat  sars_1k.mai  sars_1k.mat  sars_4k.mat  test1k.mai  test1k.mat
results/test_alignment/: stderr  stdout  test
samtools/: Snakefile
samtools/envs/: samtools.yaml
scripts/: 3seq2panman.py  build_panman.sh  check_imputation.py  experiment_8M.sh  experiments.sh  experiments_small.sh  generateCompressionPlotTable.py  generateLkPlots.py  generateReadMapping.py  generateScalingPlots.py  mash_split.py
search/: search_index.json
src/: AuxilaryMAT.cpp  AuxilaryMAT.hpp  PangenomeMAT.cpp  PangenomeMAT.hpp  PangenomeMAT2.cpp  PangenomeMATNew.cpp  PangenomeMATNew.hpp  PangenomeMATV2.cpp  PangenomeMATV2.hpp  PangenomeMAT_old.cpp  PangenomeMAT_old.hpp  aaTrans.cpp  align_from_seeds.c  annotate.cpp  chaining.cpp  common.hpp  consensus.cpp  core_likelihood.cpp  core_likelihood.hpp  fasta.cpp  fitchSankoff.cpp  gfa.cpp  impute.cpp  kseq.hpp  llk_example.cpp  maf.cpp  main.cpp  main_test.c  mutation_annotation_test_proto3_optional_new.pb.cc  mutation_annotation_test_proto3_optional_new.pb.h  panman.cpp  panman.hpp  panman2usher.cpp  panmanUtils.cpp  panmanUtils.hpp  ratioTest.cpp  read_pmat.cpp  reroot.cpp  rotation.cpp  statsgenotype.hpp  (+6 more)
src/minimap2_src/: Makefile  format.c  integration_test.c  map.c  real_test.c
src/minimap2_src/real_test.dSYM/Contents/: Info.plist
src/test/: placement.test.cpp  test.fa  test.fastq  test.json  test.nwk  test.pmat
src/test/statsgenotype/: prune.sh  prune_2k.py
src/test/statsgenotype/fastq_2k/: BS000841.1.1kreads.fastq_R1.fastq  BS000841.1.1kreads.fastq_R2.fastq  BS000841.1.1kreads.fastq_abundance.txt  BS001339.1.1kreads.fastq_R1.fastq  BS001339.1.1kreads.fastq_R2.fastq  BS001339.1.1kreads.fastq_abundance.txt  BS001694.1.1kreads.fastq_R1.fastq  (+5951 more)
test/: sars_20.fa  sars_20.json  sars_20.nwk
utils/: index.html
vggen/: Snakefile
vggen/envs/: pggb.yaml  vg.yaml
vggen/src/: mat_gen.py  readJson.py
workflows/: Snakefile
workflows/envs/: panmanUtils.yml
workflows/scripts/: splitSeqs.py  updateNewick.py  wfmash.sh
(+6 files in other folders)
